[gd_scene load_steps=2 format=3 uid="uid://0r44knmtspjp"]

[ext_resource type="Script" path="res://game_elements/spawn_position.gd" id="1_o8q5t"]

[node name="SpawnPosition" type="Marker2D"]
script = ExtResource("1_o8q5t")

[node name="Timer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
